<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" >
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id ="@+id/app_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="26sp"
                android:textColor="@color/cardview_light_background"
                android:text="@string/app_name"/>
            <TextView
                android:id="@+id/contacts_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/cardview_light_background" />

        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/search_item"
        android:layout_width="match_parent"
        android:hint="@string/search_contacts"
        android:layout_below="@id/toolbar"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:background="@drawable/search_bar"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:text="@string/no_contacts_available"
        android:textSize="15sp"
        android:id="@+id/no_contacts_text_view"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_centerInParent="true"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:id="@+id/progress_bar_card_view"
        android:layout_height="150dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/welcome_text"
                android:textSize="30sp"
                android:text="@string/progressbar_welcome"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loading_text"
                android:layout_below="@id/welcome_text"
                android:textSize="15sp"
                android:text="@string/loading_contacts"/>
            <ProgressBar
                android:layout_centerInParent="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/loading_text"
                style="?android:progressBarStyleLarge"
                android:id="@+id/progressBar" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewcontacts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/search_item" />
</RelativeLayout>