<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <Toolbar
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/contact_detail_toolbar"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:src="@drawable/camera"
                android:id="@+id/imageView"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_below="@id/imageView"
                android:textSize="30sp"
                android:id="@+id/contact_title"
                android:textColor="@color/cardview_light_background"/>
        </RelativeLayout>

    </Toolbar>

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/recyclerviewcontacts_details"-->
<!--        android:layout_width="match_parent"-->
<!--       -->
<!--        android:layout_height="350sp" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_below="@id/contact_detail_toolbar"
        android:layout_marginStart="30dp"
        android:orientation="vertical">
<!--        android:layout_below="@id/contact_detail_toolbar"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/number_home_detail_card_view"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/number_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/number_home_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/ic_action_message"
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_action_phone"
                tools:ignore="ContentDescription" />
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:orientation="horizontal"
           android:id="@+id/number_mobile_details_layout"
           android:visibility="gone"
           android:layout_height="wrap_content">
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:text="@string/number_mobile"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="20sp"/>
               <TextView
                   android:id="@+id/number_mobile_detail"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="20sp"/>
           </LinearLayout>
           <ImageView
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:layout_marginStart="100dp"
               android:src="@drawable/ic_action_message"
               tools:ignore="ContentDescription" />
           <ImageView
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:layout_marginStart="10dp"
               android:src="@drawable/ic_action_phone"
               tools:ignore="ContentDescription" />
       </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:id="@+id/number_work_details_layout"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/number_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/number_work_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/ic_action_message"
                tools:ignore="ContentDescription" />
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_action_phone"
                tools:ignore="ContentDescription" />
        </LinearLayout>
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:visibility="gone"
           android:id="@+id/number_other_details_layout"
           android:orientation="horizontal">
           <LinearLayout
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:orientation="vertical">
               <TextView
                   android:text="@string/number_other"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="20sp"/>
               <TextView
                   android:id="@+id/number_other_detail"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textSize="20sp"/>

           </LinearLayout>
           <ImageView
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:layout_marginStart="100dp"
               android:src="@drawable/ic_action_message"
               tools:ignore="ContentDescription" />
           <ImageView
               android:layout_width="40dp"
               android:layout_height="40dp"
               android:layout_marginStart="10dp"
               android:src="@drawable/ic_action_phone"
               tools:ignore="ContentDescription" />
       </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/email_home_details_layout"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/number_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/email_home_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/ic_action_email"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/email_work_details_layout"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/number_work"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/email_work_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/ic_action_email"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/email_other_details_layout"
            android:visibility="gone"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:text="@string/number_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/email_other_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
            </LinearLayout>
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/ic_action_email"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/contact_other_details_layout"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:text="@string/number_other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/contact_other_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="200dp"
            android:orientation="vertical"
            android:id="@+id/edit_layout"
            android:layout_gravity="end"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_edit"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EDIT" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="200dp"
            android:orientation="vertical"
            android:id="@+id/delete_layout"
            android:layout_gravity="end"
            android:gravity="center"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_action_delete"
                tools:ignore="ContentDescription" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DELETE" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>